# ChangeLog for dev-ruby/bcrypt-ruby
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/bcrypt-ruby/ChangeLog,v 1.24 2014/10/24 14:49:02 mrueg Exp $

*bcrypt-ruby-3.1.9 (24 Oct 2014)

  24 Oct 2014; Manuel Rüger <mrueg@gentoo.org> +bcrypt-ruby-3.1.9.ebuild:
  Version bump.

  05 Aug 2014; Manuel Rüger <mrueg@gentoo.org> bcrypt-ruby-3.1.7.ebuild:
  Remove trailing '.' from DESCRIPTION.

  15 May 2014; Manuel Rüger <mrueg@gentoo.org> -bcrypt-ruby-3.1.6.ebuild:
  Cleanup old.

  18 Apr 2014; Hans de Graaff <graaff@gentoo.org> bcrypt-ruby-3.1.7.ebuild:
  Add ruby21.

  19 Mar 2014; Manuel Rüger <mrueg@gentoo.org> -bcrypt-ruby-3.1.2-r1.ebuild,
  -files/bcrypt-ruby-3.0.1-undefined-symbols.patch:
  Cleanup old.

*bcrypt-ruby-3.1.7 (06 Mar 2014)

  06 Mar 2014; Hans de Graaff <graaff@gentoo.org> +bcrypt-ruby-3.1.7.ebuild:
  Version bump. Ebuild by Peter Wilmott in the ruby overlay.

  25 Feb 2014; Hans de Graaff <graaff@gentoo.org> bcrypt-ruby-3.1.6.ebuild:
  Fix gem specification to not use leading spaces, fixing a repoman warning.

*bcrypt-ruby-3.1.6 (23 Feb 2014)

  23 Feb 2014; Hans de Graaff <graaff@gentoo.org> +bcrypt-ruby-3.1.6.ebuild:
  Version bump. Handle renaming of the gem from bcrypt-ruby to bcrypt. Install
  compability gemspec.

*bcrypt-ruby-3.1.2-r1 (05 Nov 2013)

  05 Nov 2013; Manuel Rüger <mrueg@gentoo.org> +bcrypt-ruby-3.1.2-r1.ebuild,
  -bcrypt-ruby-3.0.1.ebuild, -bcrypt-ruby-3.1.1.ebuild,
  -bcrypt-ruby-3.1.2.ebuild:
  Add ruby20 target. Cleanup old.

*bcrypt-ruby-3.1.2 (27 Aug 2013)

  27 Aug 2013; Hans de Graaff <graaff@gentoo.org> +bcrypt-ruby-3.1.2.ebuild:
  Version bump.

*bcrypt-ruby-3.1.1 (18 Jul 2013)

  18 Jul 2013; Manuel Rüger <mrueg@gentoo.org> +bcrypt-ruby-3.1.1.ebuild:
  Version bump

  14 May 2013; Hans de Graaff <graaff@gentoo.org> bcrypt-ruby-3.0.1.ebuild,
  +files/bcrypt-ruby-3.0.1-undefined-symbols.patch:
  Remove unused code triggering unused symbols, bug 469690.
