@@ -1,6 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST bcrypt-3.1.10.gem 44032 SHA256 86d25b7eaec3db734bf681aa0e3d58e121766d75c849113aeb602549ff3f8e95 SHA512 11e7a1ea28c53d22354abd3891b88c5f58bd8c18611a2964db69e56e5f9b819e5af184423fbd7fb2ebd1fb84b1618fbd043f0bfd62902515a07427846bef607a WHIRLPOOL e27e2dc2b2796aca39359617adb1261064a58d72b7fe30477f1a7b76678794483b8edebff558f18e68807a38634bf3ae65483c68c967c1ad2bb71589bb6df358
 DIST bcrypt-3.1.7.gem 43520 SHA256 1c30953152c7151eac21aa59eed7ea933a7bc5d5838edea1d30d79b005955702 SHA512 27cd7fe8850cfcd0ff740a8afec936890b6adebfed0e86552785813739e2c9c50827ba822c88816c50cfa5e2ef90968aeb927577a0bd36d81cec3702f9fdec41 WHIRLPOOL 3b02c723eec2154b9ef5930f8bca53db712e8162f9f48dc81fb4b1d6688cab56bc8de395256fc92e2b2219068b93f5c8f8f9badf527b931803f707cfb59388b0
 DIST bcrypt-3.1.9.gem 44032 SHA256 10bda421e4423be8c3d719010b56be99a593de4c584737963c98fc939fadef3f SHA512 5fa1bcdff413abc6a36071f670c79b6d76404b3dc9aeb9a032b22e959674763f4d08afcff93211ad5fe56f20f63d8507688135a1878ca8fcf9bb9b33dc17882b WHIRLPOOL d3d477b412193073cff65ebad757c3c83c58939047481e8dd6e8056471daf4467214cde835d1e8430594f21da821921657b3a0b6fe03b40b29cc96c89dee71ed
+EBUILD bcrypt-ruby-3.1.10.ebuild 1741 SHA256 4815afc0bed67569bef9b2a04fea634f3913942c505a3d1e35ff8abea20a87e2 SHA512 64c79f40885d424e2e6db124930b42356431e7bda85a92ce072fd2da304a8164cd331bfb8bf22fd524d15f4b61976fb63fdf1f0a883df5c28f5267139a6507a5 WHIRLPOOL 64af8cc4cd5301a54eff0679737874812a93b7d16f578a348f64348f93e71d7d7222bcd8d0119504703f00863244b56166df112be0ca2cc83d4a01be8692bcd9
 EBUILD bcrypt-ruby-3.1.7.ebuild 1738 SHA256 c690de1dee11f149f4d0e7dfe045a58a9e091dda7f694b40e869f1f75dac7d47 SHA512 5d63fa4530db1d229b2c40964ac3c7d6449b1365f251fefcdc4f6b21bab896fca9f619f65f722aa308d3ff3ccf649525e48e09b656c1d32fe8cca1964c6612c9 WHIRLPOOL 51cdf275fb148bcf188133161cb2987d29e5bff9060e03228bac19b409d963595518aef65c555a33f4abf687cbf6def6f906099d07825c55861380784f1393d1
 EBUILD bcrypt-ruby-3.1.9.ebuild 1862 SHA256 d0f00d99f4d175425bc31712e19f74d68aebbdc27c409f856fdd3f97fe852034 SHA512 49b35d0d95703686e2a3705d0364cec95b9106c74993ba91f849e8f0e0cbb01c0e8e9b95ca38afb22f31013cead8d79f8a1765d79892a0d248b2801972a6232e WHIRLPOOL 1303aa6c2b6f8cffb388aefc6a9d3a62a3e4ab8171451dc7434d932075219a8ac168c0f193f1967da6e3687862a2f1127db69d2b751ad0e7e6f11a6476460b56
-MISC ChangeLog 3420 SHA256 e2a12e465834cc07ffcce13f62d0055ef84c84b506087d422ab057856e916983 SHA512 065b795f752ab1c2be0d041a339c2c82f30fe05f2b2f36014548ac2426277b4ba760a47d645f416eb7105f633124848558cb2932e667ccba15f3583b06b93f04 WHIRLPOOL 0f2bb741f55d2deebc89883750e490388c225b06df65abe4f4a2c2e94f48c6cff288087fa1ce2c27377a8313b955dd8dc0d1f4d631a6db859d56f8c9d44dfa5b
+MISC ChangeLog 3551 SHA256 2d4fa54b4d8dc614e6ea842755c63d5105cf5b4082d3fcab4d48c1731c9a7c7e SHA512 ac05d351eb36ff96ab9761246a43e3f0ddb98ae3be14fafa943523465dd097a32173f182dc49e8acc2ce9080ab267720dc5cc65ba555c0b19ead26df287780e5 WHIRLPOOL 781d9dbe8e1baddc0b31b970b1c7c4afdffa6d80fab9cb781df183f5398090f5b6840b757e179e2cffc67864b35bbe930cf034c24847aa0c5e8323b74bffe639
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlTJ0owACgkQiIP6VqMIqNfcywEAkDIOmrUF4xDK7IAh71kwdS3c
+qq/PDR0RcGxkqoQ2SaAA/jw6trEVdUIWoSgAuAv3w3EpfRLB9QtonizjZj327J8t
+=evoA
+-----END PGP SIGNATURE-----
