@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/bcrypt-ruby
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/bcrypt-ruby/ChangeLog,v 1.24 2014/10/24 14:49:02 mrueg Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/bcrypt-ruby/ChangeLog,v 1.25 2015/01/29 06:26:13 graaff Exp $
+
+*bcrypt-ruby-3.1.10 (29 Jan 2015)
+
+  29 Jan 2015; Hans de Graaff <graaff@gentoo.org> +bcrypt-ruby-3.1.10.ebuild:
+  Version bump.
 
 *bcrypt-ruby-3.1.9 (24 Oct 2014)
 
